--- a/Rent-Management-System/Views/Tenants/All.cshtml
+++ b/Rent-Management-System/Views/Tenants/All.cshtml
@@ -17,6 +17,7 @@
             <th scope="col">Email</th>
             <th scope="col">Phone</th>
             <th scope="col">Date Of Moving In</th>
+            <th scope="col">Debt</th>
         </tr> 
     </thead>
     <tbody>
@@ -28,6 +29,7 @@
                 <td>@tenant.Email</td>
                 <td>@tenant.PhoneNumber</td>
                 <td>@tenant.DateOfMovingIn</td>
+                <td><b>€@tenant.Debt</b></td>
             </tr>
         }
     </tbody>
