--- a/Rent-Management-System/Views/Tenants/Index.cshtml
+++ b/Rent-Management-System/Views/Tenants/Index.cshtml
@@ -11,6 +11,7 @@
         <div class="tenant-info">Email: @Model.Email</div>
         <div class="tenant-info">Phone: @Model.PhoneNumber</div>
         <a asp-controller="Payments" asp-action="Tenant" asp-route-id="@Model.TenantId" class="btn btn-secondary btn-sm mt-2">View Payments</a>
+        <a asp-action="Edit" asp-route-id="@Model.TenantId" class="btn btn-info btn-sm mt-2">Edit Tenant</a>
     </div>
     <div class="pt-2">
         @{ if (Model.MoneyOwed > 0)
