--- a/Rent-Management-System/Views/Property/All.cshtml
+++ b/Rent-Management-System/Views/Property/All.cshtml
@@ -4,6 +4,9 @@
     ViewData["Title"] = "Property";
 }
 
+<div class="mb-2">
+    <h3>All Properties</h3>
+</div>
 <div class="mb-3">
     <a asp-controller="Property" asp-action="Add" class="btn btn-success btn-sm">Add Property</a>
 </div>
